--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-html, body {
+html, body, #container {
     height: 100%;
     overflow: hidden;
   }
-body {
+#container {
     display: flex;
     justify-content: center;
     align-items: center;
